# rag-evaluation-suite

./: .env.example  .gitignore  API_CACHE_INTEGRATION.md  CLAUDE.md  DESIGN_SUMMARY.md  EVALUATION_CACHE_INVESTIGATION_REPORT.md  EVALUATION_METRICS_SETUP.md  README.md  SECURITY.md  clear_evaluation_cache.py  debug_evaluation_metrics_flow.py  demo_evaluation_metrics.py  diagnostic_cache_keys.py  diagnostic_fix_evaluation.py  diagnostic_realistic_cache.py  final_metrics_test.py  fix_ui_metrics_caching.py  pyproject.toml  requirements.txt  start_app.py  test_cache_integration.py  test_evaluation_fix.py  test_evaluation_fix_simple.py  test_rrf_metrics_bug.py  test_ui_evaluation_metrics.py  test_ui_metrics_comprehensive.py
app/: deps.py  main.py
app/routers/: cache.py  query.py
app/schemas/: query.py
app/services/: app_container.py
backend/: container.py  dependencies.py  main.py  security.py  state_store.py
backend/routers/: __init__.py  cache.py  evaluate.py  ingest.py  init.py  query.py
backend/schemas/: __init__.py  common.py  evaluation.py  ingest.py  query.py
config/: .env.example  settings.py
core/database/: vector_store.py
core/evaluation/: __init__.py  evaluator.py  metrics.py
core/processors/: document_processor.py
core/search/: bm25_search.py  hybrid_search.py  vector_search.py
core/services/: cache_service.py  (+3 more)
docs/: ARCHITECTURE.md  DEPENDENCY_INJECTION_MIGRATION.md  NLTK_SETUP.md  RAGAS.md  README.md
examples/: evaluation_demo.py
frontend/: streamlit_app.py
scripts/: benchmark_ragas.py  setup_nltk.py
src/: HybridSearchEngine.py
(+23 files in other folders)
